Downloads/MultiCloudDevOpsProject-main/task_7/elasticsearch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: logging
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.10.0
        ports:
        - containerPort: 9200
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 2Gi
