Downloads/MultiCloudDevOpsProject-main/task_7/kibana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kibana
  namespace: logging
spec:
  host: kibana-logging.apps.apps.ocpuat.devopsconsulting.org
  port:
    targetPort: 5601
  to:
    kind: Service
    name: kibana
    weight: 100
  wildcardPolicy: None
